--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<groupId>com.greglturnquist</groupId>
 		<artifactId>react-and-spring-data-rest</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>./parent_pom/</relativePath>
 	</parent>
 	
 	<artifactId>react-and-spring-data-rest-basic</artifactId>
