--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-import": "^1.5.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   }
