--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.17",
+    "@material-ui/icons": "^4.11.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rest": "^1.3.1"
   },
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
+    "watch:java": "onchange 'src/main/java/*' -- npm run build:java",
+    "watch:css": "onchange 'src/main/resource/static/*.css' -- npm run build:css",
+    "watch:js": "onchange 'src/main/js/*' -- npm run build:js",
+    "watch": "npm run watch:css & npm run watch:js & npm run watch:java"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
